--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,20 +2,20 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-    <div th:replace="base::header"></div>
+<head th:replace="base::headstuff">
     <title>error</title>
 
 </head>
 
 <body>
-<div th:replace="base::nav"></div>
+<div th:replace="base::navbar"></div>
 
 <div class="container">
-    <!--insert webpage content here-->
+
     <h1>Error</h1><br/>
 </div>
 
-<div th:replace="base::footer"></div>
+<nav th:replace="base :: footer"></nav>
+<th:block th:replace="base:: jslinks"></th:block>
 </body>
 </html>
