--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,14 +2,12 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-    <div th:replace="base::header"></div>
+<head th:replace="base::headstuff">
     <title>index</title>
-
 </head>
 
 <body>
-<div th:replace="base::nav"></div>
+<div th:replace="base::navbar"></div>
 
 <div class="container">
     <!--insert webpage content here-->
@@ -22,6 +20,7 @@
     </div>
 </div>
 
-<div th:replace="base::footer"></div>
+<nav th:replace="base :: footer"></nav>
+<th:block th:replace="base:: jslinks"></th:block>
 </body>
 </html>
